# lrsCV1

./: LRSDokumentácia.docx
2nd_project/: CMakeLists.txt  mission_1_all.csv  mission_3_all.csv  package.xml  swarm_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/prehladavaci_algoritmus/lib/prehladavaci_algoritmus/: drone_controller  planner_node
install/prehladavaci_algoritmus/share/ament_index/resource_index/package_run_dependencies/: prehladavaci_algoritmus
install/prehladavaci_algoritmus/share/ament_index/resource_index/parent_prefix_path/: prehladavaci_algoritmus
install/prehladavaci_algoritmus/share/prehladavaci_algoritmus/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/prehladavaci_algoritmus/share/prehladavaci_algoritmus/cmake/: prehladavaci_algoritmusConfig-version.cmake  prehladavaci_algoritmusConfig.cmake
install/prehladavaci_algoritmus/share/prehladavaci_algoritmus/environment/: ament_prefix_path.dsv  path.dsv
install/prehladavaci_algoritmus/share/prehladavaci_algoritmus/maps/: map.pcd
log/: latest_build
nacitanieMapy/: CMakeLists.txt  package.xml
nacitanie_mapy/: CMakeLists.txt  package.xml
nacitanie_mapy/install/: local_setup.sh  setup.sh
nacitanie_mapy/install/pcd_map_loader/lib/pcd_map_loader/: pcd_map_loader_node
nacitanie_mapy/install/pcd_map_loader/share/ament_index/resource_index/package_run_dependencies/: pcd_map_loader
nacitanie_mapy/install/pcd_map_loader/share/ament_index/resource_index/parent_prefix_path/: pcd_map_loader
nacitanie_mapy/install/pcd_map_loader/share/pcd_map_loader/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
nacitanie_mapy/install/pcd_map_loader/share/pcd_map_loader/cmake/: pcd_map_loaderConfig-version.cmake  pcd_map_loaderConfig.cmake
nacitanie_mapy/install/pcd_map_loader/share/pcd_map_loader/environment/: ament_prefix_path.dsv  path.dsv
nacitanie_mapy/log/: latest_build
nacitanie_mapy/src/: pcd_map_loader.cpp
nacitavanie_misie/: CMakeLists.txt  package.xml
nacitavanie_misie/src/: csv_reader_node.cpp
prehladavaci_algoritmus/: CMakeLists.txt  package.xml
prehladavaci_algoritmus/src/: a_star.cpp  a_star.hpp  drone_controller.cpp  drone_mission_node.cpp  plannerAlgorithm.cpp  voxel_map.cpp  voxel_map.hpp
