<?xml version="1.0"?>
<package format="3">
  <name>pcd_map_loader</name>
  <version>0.0.1</version>
  <description>ROS2 node na nacitanie .pcd suboru a publikovanie ako sensor_msgs/PointCloud2</description>

  <maintainer email="xhasak@stuba.sk">Miroslav Hasak</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

