<?xml version="1.0"?>

<package format="3">

  <name>csv_reader</name>

  <version>0.0.1</version>

  <description>ROS2 node that reads and prints data from a CSV file.</description>



  <!-- Kto balík vytvoril -->

  <maintainer email="tvoje.meno@email.com">Tvoje Meno</maintainer>



  <!-- Licencia -->

  <license>MIT</license>



  <!-- Build závislosti -->

  <buildtool_depend>ament_cmake</buildtool_depend>



  <!-- Runtime a build závislosti -->

  <depend>rclcpp</depend>



  <!-- Voliteľné: ak pridáš vlastné správy alebo iné knižnice -->

  <!-- <depend>std_msgs</depend> -->



  <!-- Testovanie (voliteľné) -->

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_lint_common</test_depend>



  <export>

    <build_type>ament_cmake</build_type>

  </export>

</package>
